--- a/css/components.css
+++ b/css/components.css
@@ -66,3 +66,49 @@
     font-size: 16px;
   }
 }
+
+/*
+btn-menu
+ */
+  .btn-menu {
+    background: none;
+    border-radius: 0;
+    cursor: pointer;
+    display: inline-block;
+    padding: 15px;
+    border: 0;  
+  }
+
+  .btn-menu__box {
+    display: inline-block;
+    width: 40px;
+    height: 24px;
+  }
+
+ .btn-menu__inner {
+   position: relative;
+   background: #fff;
+   height: 4px;
+   width: 100%;
+   display: block;
+   top: 50%;
+ }
+
+ .btn-menu__inner::before,
+ .btn-menu__inner::after {
+   content: "";
+   width: 100%;
+   height: 4px;
+   background: #fff;
+   position: absolute;
+   left: 0;
+   border-radius: 5px;
+ }
+
+ .btn-menu__inner::before {
+   top: -10px;
+ }
+
+ .btn-menu__inner::after {
+   bottom: -10px;
+ }
